--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -31,7 +31,7 @@ remotes:
 - "url": "https://github.com/deimoscoin/deimos.git"
   "dir": "deimos"
 files:
-- "MacOSX10.11.sdk.tar.gz"
+- "MacOSX10.13.sdk.tar.xz"
 script: |
   WRAP_DIR=$HOME/wrapped
   HOSTS="x86_64-apple-darwin14"
